versioned_docs/version-3.3/api-libf3d/global_contents.md
# Contents

* [f3d::interactor::already\_exists\_exception](structf3d_1_1interactor_1_1already__exists__exception.md) Structure
  * [already\_exists\_exception](structf3d_1_1interactor_1_1already__exists__exception.md#structf3d_1_1interactor_1_1already__exists__exception_1a356bff2bef426f4c93727c87f8850521) Function
* [f3d::options::scene::animation](structf3d_1_1options_1_1scene_1_1animation.md) Structure
  * [autoplay](structf3d_1_1options_1_1scene_1_1animation.md#structf3d_1_1options_1_1scene_1_1animation_1a644b44fa974613e62bbabe0076699c60) Variable
  * [index](structf3d_1_1options_1_1scene_1_1animation.md#structf3d_1_1options_1_1scene_1_1animation_1ae3270de15c7fbc48104bb5a89baa8881) Variable
  * [indices](structf3d_1_1options_1_1scene_1_1animation.md#structf3d_1_1options_1_1scene_1_1animation_1a2e8dc8d4ba58c493b95605d9cb60b85a) Variable
  * [speed\_factor](structf3d_1_1options_1_1scene_1_1animation.md#structf3d_1_1options_1_1scene_1_1animation_1a1b672c686a3d7fffb993f11179b78368) Variable
* [f3d::options::render::effect::antialiasing](structf3d_1_1options_1_1render_1_1effect_1_1antialiasing.md) Structure
  * [enable](structf3d_1_1options_1_1render_1_1effect_1_1antialiasing.md#structf3d_1_1options_1_1render_1_1effect_1_1antialiasing_1ae5f17473d2f93f33a9538a4b00441420) Variable
  * [mode](structf3d_1_1options_1_1render_1_1effect_1_1antialiasing.md#structf3d_1_1options_1_1render_1_1effect_1_1antialiasing_1a5f6e22e3f6631fe5eeca6414cf61dbc8) Variable
* [f3d::options::render::armature](structf3d_1_1options_1_1render_1_1armature.md) Structure
  * [enable](structf3d_1_1options_1_1render_1_1armature.md#structf3d_1_1options_1_1render_1_1armature_1a1b0faf6db4400d0e15be0468413db1f6) Variable
* [f3d::options::render::background::blur](structf3d_1_1options_1_1render_1_1background_1_1blur.md) Structure
  * [coc](structf3d_1_1options_1_1render_1_1background_1_1blur.md#structf3d_1_1options_1_1render_1_1background_1_1blur_1ae505ba82ed3fb4e3d5ee7ae70c132fbd) Variable
  * [enable](structf3d_1_1options_1_1render_1_1background_1_1blur.md#structf3d_1_1options_1_1render_1_1background_1_1blur_1ae0e444c5dcd89f66d369092230e3a93c) Variable
* [f3d::options::ui::backdrop](structf3d_1_1options_1_1ui_1_1backdrop.md) Structure
  * [opacity](structf3d_1_1options_1_1ui_1_1backdrop.md#structf3d_1_1options_1_1ui_1_1backdrop_1a832467339ebd580527f48d872c49b69e) Variable
* [f3d::options::render::axes\_grid](structf3d_1_1options_1_1render_1_1axes__grid.md) Structure
  * [enable](structf3d_1_1options_1_1render_1_1axes__grid.md#structf3d_1_1options_1_1render_1_1axes__grid_1a2059af1580ab625db8ae4ea30d24606b) Variable
* [f3d::engine::cache\_exception](structf3d_1_1engine_1_1cache__exception.md) Structure
  * [cache\_exception](structf3d_1_1engine_1_1cache__exception.md#structf3d_1_1engine_1_1cache__exception_1ab75d07f81b5a88b12a4e45781aed373d) Function
* [f3d::options::render::background](structf3d_1_1options_1_1render_1_1background.md) Structure
  * [blur](structf3d_1_1options_1_1render_1_1background.md#structf3d_1_1options_1_1render_1_1background_1a2c5319c4d09b3568fe33c78f45670671) Variable
  * [color](structf3d_1_1options_1_1render_1_1background.md#structf3d_1_1options_1_1render_1_1background_1a0e2d7fe0d8c80f744da83c4e405a00a3) Variable
  * [skybox](structf3d_1_1options_1_1render_1_1background.md#structf3d_1_1options_1_1render_1_1background_1ad298f61f6e400c3d7264773da00c5ab8) Variable
* [f3d::options::scene::camera](structf3d_1_1options_1_1scene_1_1camera.md) Structure
  * [index](structf3d_1_1options_1_1scene_1_1camera.md#structf3d_1_1options_1_1scene_1_1camera_1a799f270b9f1766f97dd122880c398f0f) Variable
  * [orthographic](structf3d_1_1options_1_1scene_1_1camera.md#structf3d_1_1options_1_1scene_1_1camera_1a1adaab60a6bf1f25a0ae959d0b78f423) Variable
* [f3d::options::model::color](structf3d_1_1options_1_1model_1_1color.md) Structure
  * [opacity](structf3d_1_1options_1_1model_1_1color.md#structf3d_1_1options_1_1model_1_1color_1a65270b2230a702a7658beefc83e815fe) Variable
  * [rgb](structf3d_1_1options_1_1model_1_1color.md#structf3d_1_1options_1_1model_1_1color_1a5608a561ab77df64de65f40b4fae5f88) Variable
  * [texture](structf3d_1_1options_1_1model_1_1color.md#structf3d_1_1options_1_1model_1_1color_1a9574cb855badcc67b83eea7e73aed7c1) Variable
* [f3d::color\_t](classf3d_1_1color__t.md) Class
  * [color\_t](classf3d_1_1color__t.md#classf3d_1_1color__t_1acf69164a9f721cf166a9a8270a8c3156) Function
  * [color\_t](classf3d_1_1color__t.md#classf3d_1_1color__t_1a78047417d30e9afae0ea60d38c20c283) Function
  * [color\_t](classf3d_1_1color__t.md#classf3d_1_1color__t_1ae5633847d4df8d05405307212fbe940f) Function
  * [color\_t](classf3d_1_1color__t.md#classf3d_1_1color__t_1ab864c2094865a5c8d04e14affcbfd08b) Function
  * [r](classf3d_1_1color__t.md#classf3d_1_1color__t_1a029f159302976b8bc773a29fa8587f69) Function
  * [g](classf3d_1_1color__t.md#classf3d_1_1color__t_1a2248b84a5ada178f2679426f9fea73fd) Function
  * [b](classf3d_1_1color__t.md#classf3d_1_1color__t_1a51dcb99a6f2845d9d31d3a1a9adacda2) Function
* [f3d::camera](classf3d_1_1camera.md) Class
  * [setPosition](classf3d_1_1camera.md#classf3d_1_1camera_1a14f81460eb981f789c5d4a6784fd8d29) Function
  * [getPosition](classf3d_1_1camera.md#classf3d_1_1camera_1a40c5b3c88d916dab949adab8d426595b) Function
  * [getPosition](classf3d_1_1camera.md#classf3d_1_1camera_1ab295a53f2d6f22ef7344b6e6a783f57d) Function
  * [setFocalPoint](classf3d_1_1camera.md#classf3d_1_1camera_1a698939cac8bdccf066b902ef7786abaf) Function
  * [getFocalPoint](classf3d_1_1camera.md#classf3d_1_1camera_1a9f6c94e3ef2c043dd6cae735dec083e0) Function
  * [getFocalPoint](classf3d_1_1camera.md#classf3d_1_1camera_1aeb8cd30cd39bc60136669892d3cdcc57) Function
  * [setViewUp](classf3d_1_1camera.md#classf3d_1_1camera_1af41a32697463f7a9557a626ce36b309e) Function
  * [getViewUp](classf3d_1_1camera.md#classf3d_1_1camera_1ad063e0a053acb2e5e9275bec1d6e0054) Function
  * [getViewUp](classf3d_1_1camera.md#classf3d_1_1camera_1ae676ec1e47bf39276146a36ba37530c0) Function
  * [setViewAngle](classf3d_1_1camera.md#classf3d_1_1camera_1aca943dc34c65f3b5f9f3773a7b943084) Function
  * [getViewAngle](classf3d_1_1camera.md#classf3d_1_1camera_1add0fc7c6cdd21ff002c8e3b9e9f41f34) Function
  * [getViewAngle](classf3d_1_1camera.md#classf3d_1_1camera_1a87f4da6b5c0893c703dabde78423c6d2) Function
  * [setState](classf3d_1_1camera.md#classf3d_1_1camera_1a24144f2aa3dd5785f23d6f641a82f549) Function
  * [getState](classf3d_1_1camera.md#classf3d_1_1camera_1a948a86b0f4cdd00ffaab16e3138b3472) Function
  * [getState](classf3d_1_1camera.md#classf3d_1_1camera_1ad3a3808a94f57e11ba44a06dc107bc9a) Function
  * [dolly](classf3d_1_1camera.md#classf3d_1_1camera_1a52b3ef3992b10bc5d0ef0d0af78c18dd) Function
  * [pan](classf3d_1_1camera.md#classf3d_1_1camera_1ab04f6d77ca126becdf76f8c54b69b2d2) Function
  * [zoom](classf3d_1_1camera.md#classf3d_1_1camera_1a25389ac60a7dfc9f70a01e85f1f887de) Function
  * [roll](classf3d_1_1camera.md#classf3d_1_1camera_1aba63ef9b310c53f90cecb2d546fe18cf) Function
  * [azimuth](classf3d_1_1camera.md#classf3d_1_1camera_1a1f7e0da617b9404229131c722d27692b) Function
  * [yaw](classf3d_1_1camera.md#classf3d_1_1camera_1a31e21553e251eb931127b138bfd44cef) Function
  * [elevation](classf3d_1_1camera.md#classf3d_1_1camera_1a834dcc2896ad2881c7bdef6e1759d67e) Function
  * [pitch](classf3d_1_1camera.md#classf3d_1_1camera_1aac2ed5910d98ba57c2d19335dcbca87b) Function
  * [setCurrentAsDefault](classf3d_1_1camera.md#classf3d_1_1camera_1a008bf4b1b3a0e06ed1e6753ddd12c10d) Function
  * [resetToDefault](classf3d_1_1camera.md#classf3d_1_1camera_1a419f50f67c84bb4bae12742a399f4132) Function
  * [resetToBounds](classf3d_1_1camera.md#classf3d_1_1camera_1a78013e452116352500cb02af8356cb4e) Function
* [f3d::camera\_state\_t](structf3d_1_1camera__state__t.md) Structure
  * [position](structf3d_1_1camera__state__t.md#structf3d_1_1camera__state__t_1aa2e4ba7abf206ef14ad9b851af1fcbc6) Variable
  * [focalPoint](structf3d_1_1camera__state__t.md#structf3d_1_1camera__state__t_1a108b56174ebc8c1ee9a9ad5bb6548ccc) Variable
  * [viewUp](structf3d_1_1camera__state__t.md#structf3d_1_1camera__state__t_1afda85e5dd3f7bc9773bc5ef22c1ccad7) Variable
  * [viewAngle](structf3d_1_1camera__state__t.md#structf3d_1_1camera__state__t_1a28f08d9fc1076fe6e265822cb93fbed7) Variable
* [f3d::colormap\_t](classf3d_1_1colormap__t.md) Class
  * [Vector](classf3d_1_1colormap__t.md#classf3d_1_1colormap__t_1aa9d270c81176f8025c47cc7d7c933975) Variable
  * [colormap\_t](classf3d_1_1colormap__t.md#classf3d_1_1colormap__t_1a52bf9c26a6d9658e080ce536cf67f195) Function
  * [colormap\_t](classf3d_1_1colormap__t.md#classf3d_1_1colormap__t_1ae64d62b6ec1fae4875959a4d331b179f) Function
  * [colormap\_t](classf3d_1_1colormap__t.md#classf3d_1_1colormap__t_1aef7b5f89eeb562d31ad3548342d556f5) Function
  * [operator==](classf3d_1_1colormap__t.md#classf3d_1_1colormap__t_1a9d90894bec8b68e89da9ef10f73be83f) Function
  * [operator!=](classf3d_1_1colormap__t.md#classf3d_1_1colormap__t_1a812e11d74e119dc5eb62e0772b096987) Function
  * [data](classf3d_1_1colormap__t.md#classf3d_1_1colormap__t_1afd948309686178af70463e014d2dfb35) Function
* [f3d::interactor::command\_runtime\_exception](structf3d_1_1interactor_1_1command__runtime__exception.md) Structure
  * [command\_runtime\_exception](structf3d_1_1interactor_1_1command__runtime__exception.md#structf3d_1_1interactor_1_1command__runtime__exception_1ac33aa8920fd869f50066de4ca067f950) Function
* [f3d::direction\_t](classf3d_1_1direction__t.md) Class
  * [direction\_t](classf3d_1_1direction__t.md#classf3d_1_1direction__t_1aeef8b5002e7596df41f95feb8d7ee8aa) Function
  * [direction\_t](classf3d_1_1direction__t.md#classf3d_1_1direction__t_1a4a537a5f6eeb6bac3a07b0b86f3cd2e4) Function
  * [direction\_t](classf3d_1_1direction__t.md#classf3d_1_1direction__t_1aa947f4c442ec9246023f947c52fad5c0) Function
  * [direction\_t](classf3d_1_1direction__t.md#classf3d_1_1direction__t_1a771efb8b0f871b1a62be45e8e652aa4a) Function
  * [x](classf3d_1_1direction__t.md#classf3d_1_1direction__t_1ac91362a4d72347f51706c3e6b5db259d) Function
  * [y](classf3d_1_1direction__t.md#classf3d_1_1direction__t_1ac5c01406d2be095e4c05f793feb282fd) Function
  * [z](classf3d_1_1direction__t.md#classf3d_1_1direction__t_1ad099e4ab17ddb0b70d0c003f7e820fe9) Function
  * [operator f3d::vector3\_t](classf3d_1_1direction__t.md#classf3d_1_1direction__t_1ae242b6bd09057602bc2666b5d857f57e) Function
* [f3d::context](classf3d_1_1context.md) Class
  * [fptr](classf3d_1_1context.md#classf3d_1_1context_1a610f788d93aa8db773efac4238403056) Typedef
  * [function](classf3d_1_1context.md#classf3d_1_1context_1a6fca2b9e4d2591fd6b68a2f8b5ec727e) Typedef
  * [glx](classf3d_1_1context.md#classf3d_1_1context_1a09f0e84622124d63c5d4e81f3dc4105d) Function
  * [wgl](classf3d_1_1context.md#classf3d_1_1context_1a87b1ee9e5330aaa6c29a07069cf74820) Function
  * [cocoa](classf3d_1_1context.md#classf3d_1_1context_1a8db31eba3c7458bf6dea0391dbd3ea47) Function
  * [egl](classf3d_1_1context.md#classf3d_1_1context_1a90a0689215151ede480d3b1c94c28b2a) Function
  * [osmesa](classf3d_1_1context.md#classf3d_1_1context_1a88a487aa18dd42869f7852b7c6c44aed) Function
  * [getSymbol](classf3d_1_1context.md#classf3d_1_1context_1a605d0609b2db440c9e00349d9c17e2c9) Function
* [f3d::double\_array\_t](classf3d_1_1double__array__t.md) Class
  * [Array](classf3d_1_1double__array__t.md#classf3d_1_1double__array__t_1ab4ec6824918af432b4c7b3fa6ac54792) Variable
  * [double\_array\_t](classf3d_1_1double__array__t.md#classf3d_1_1double__array__t_1a13bdc79ab1512e3105862d0cf06a1e50) Function
  * [double\_array\_t](classf3d_1_1double__array__t.md#classf3d_1_1double__array__t_1a872c1e46cf2b5c14f5c43c0fdc9c7394) Function
  * [double\_array\_t](classf3d_1_1double__array__t.md#classf3d_1_1double__array__t_1aed53b98cd814aa024f6566c1f2b2dfc7) Function
  * [operator==](classf3d_1_1double__array__t.md#classf3d_1_1double__array__t_1a7a03eb4ac6c40822b820b8acd255e7c3) Function
  * [operator!=](classf3d_1_1double__array__t.md#classf3d_1_1double__array__t_1a31aa2831b1185ba168f8b23951bb675b) Function
  * [operator[]](classf3d_1_1double__array__t.md#classf3d_1_1double__array__t_1a0c160f2e0625cce337988dd018e7b6a1) Function
  * [operator[]](classf3d_1_1double__array__t.md#classf3d_1_1double__array__t_1ac2ebe0188822e128084ac53be7ffbf03) Function
  * [data](classf3d_1_1double__array__t.md#classf3d_1_1double__array__t_1af27ad47a15ebbfde487ecb7d67ffe0de) Function
* [f3d::interactor::does\_not\_exists\_exception](structf3d_1_1interactor_1_1does__not__exists__exception.md) Structure
  * [does\_not\_exists\_exception](structf3d_1_1interactor_1_1does__not__exists__exception.md#structf3d_1_1interactor_1_1does__not__exists__exception_1a8f83956aa6132858e28d94ca1f8b7685) Function
* [f3d::options::ui::drop\_zone](structf3d_1_1options_1_1ui_1_1drop__zone.md) Structure
  * [custom\_binds](structf3d_1_1options_1_1ui_1_1drop__zone.md#structf3d_1_1options_1_1ui_1_1drop__zone_1a7eb7e63164bca5288cf5e45b26526f1f) Variable
  * [enable](structf3d_1_1options_1_1ui_1_1drop__zone.md#structf3d_1_1options_1_1ui_1_1drop__zone_1a09d5c1d8a278bb3868c7bf623ac12c9f) Variable
  * [info](structf3d_1_1options_1_1ui_1_1drop__zone.md#structf3d_1_1options_1_1ui_1_1drop__zone_1ab1c4e7df62309ca5c19aaa25273eff9d) Variable
  * [show\_logo](structf3d_1_1options_1_1ui_1_1drop__zone.md#structf3d_1_1options_1_1ui_1_1drop__zone_1af29b66ade3a7cc13227d12dea789c62a) Variable
* [f3d::options::model::emissive](structf3d_1_1options_1_1model_1_1emissive.md) Structure
  * [factor](structf3d_1_1options_1_1model_1_1emissive.md#structf3d_1_1options_1_1model_1_1emissive_1a593590f57510c465088f2cd4a21369e9) Variable
  * [texture](structf3d_1_1options_1_1model_1_1emissive.md#structf3d_1_1options_1_1model_1_1emissive_1a7dc7d4e0c944b7ccd8ef1c17df2f5c1a) Variable
* [f3d::options::render::effect](structf3d_1_1options_1_1render_1_1effect.md) Structure
  * [ambient\_occlusion](structf3d_1_1options_1_1render_1_1effect.md#structf3d_1_1options_1_1render_1_1effect_1a1b7f2866937fbd9fe07997aec7162709) Variable
  * [anti\_aliasing](structf3d_1_1options_1_1render_1_1effect.md#structf3d_1_1options_1_1render_1_1effect_1a062714bd4ce6da94b4492fa778d4f419) Variable
  * [antialiasing](structf3d_1_1options_1_1render_1_1effect.md#structf3d_1_1options_1_1render_1_1effect_1ac339a4122e38c01b2692d69b86a7aef6) Variable
  * [final\_shader](structf3d_1_1options_1_1render_1_1effect.md#structf3d_1_1options_1_1render_1_1effect_1a4ab6e1b40873de56044a8b94fad39aa1) Variable
  * [tone\_mapping](structf3d_1_1options_1_1render_1_1effect.md#structf3d_1_1options_1_1render_1_1effect_1ae94762121c57b1829521701daf0de245) Variable
  * [translucency\_support](structf3d_1_1options_1_1render_1_1effect.md#structf3d_1_1options_1_1render_1_1effect_1a638f07c2ed641c9a6b381c624b98de64) Variable
* [f3d::engine](classf3d_1_1engine.md) Class
  * [Internals](classf3d_1_1engine.md#classf3d_1_1engine_1a5129a2dfd256ea59aa30818d30708188) Variable
  * [create](classf3d_1_1engine.md#classf3d_1_1engine_1a8dc98863d9785dee5c90725248c46b8a) Function
  * [createNone](classf3d_1_1engine.md#classf3d_1_1engine_1a6c74166d9132a8e0e30e7bd8c4a3ce0f) Function
  * [createGLX](classf3d_1_1engine.md#classf3d_1_1engine_1a0cf626f2585af37614b088c5c78a2a1a) Function
  * [createWGL](classf3d_1_1engine.md#classf3d_1_1engine_1aad8377f8ceef620a494c3d1ccb86ef4a) Function
  * [createEGL](classf3d_1_1engine.md#classf3d_1_1engine_1af2ad280d2be4c58a8f30eec351cd3bf4) Function
  * [createOSMesa](classf3d_1_1engine.md#classf3d_1_1engine_1a1ea3b63b10d5f826528545a562297cd1) Function
  * [createExternal](classf3d_1_1engine.md#classf3d_1_1engine_1ad34defb23976727cdb2ae884e119e533) Function
  * [createExternalGLX](classf3d_1_1engine.md#classf3d_1_1engine_1a4fc077683aa9807ce52d3c0b45494250) Function
  * [createExternalWGL](classf3d_1_1engine.md#classf3d_1_1engine_1aa5ae12e2c05726524b94df82f63e1cc3) Function
  * [createExternalCOCOA](classf3d_1_1engine.md#classf3d_1_1engine_1aa361310e43db522f80340d1b6489f614) Function
  * [createExternalEGL](classf3d_1_1engine.md#classf3d_1_1engine_1a033427bc8d9cfc37340d566e7d901fbe) Function
  * [createExternalOSMesa](classf3d_1_1engine.md#classf3d_1_1engine_1a2228768b97a56a53ce23fb315ff368ab) Function
  * [getRenderingBackendList](classf3d_1_1engine.md#classf3d_1_1engine_1ac2fc13fa23e4f33f0aeda81d9925a2ac) Function
  * [loadPlugin](classf3d_1_1engine.md#classf3d_1_1engine_1a820b4a59f829b77f669f267cfde09186) Function
  * [autoloadPlugins](classf3d_1_1engine.md#classf3d_1_1engine_1ac4d909a879b94b496a3e9292162fb855) Function
  * [getPluginsList](classf3d_1_1engine.md#classf3d_1_1engine_1ab72eb52263a39accd6f296f893808b5a) Function
  * [getAllReaderOptionNames](classf3d_1_1engine.md#classf3d_1_1engine_1ae1f1d77bb0ec0b5df9997eb77c1b42fd) Function
  * [setReaderOption](classf3d_1_1engine.md#classf3d_1_1engine_1a95e7c2840b75b4f56f6a48ce25a4bc45) Function
  * [getLibInfo](classf3d_1_1engine.md#classf3d_1_1engine_1aaf3b6314d61f6b033887ed09255fe5a7) Function
  * [getReadersInfo](classf3d_1_1engine.md#classf3d_1_1engine_1a5b2887501e1975218442d9142f4d3b8e) Function
  * [~engine](classf3d_1_1engine.md#classf3d_1_1engine_1a42c3dd21a33f10e849c804d91af3ca37) Function
  * [engine](classf3d_1_1engine.md#classf3d_1_1engine_1a091ec0742f81eb1931aa008b6d2eb857) Function
  * [engine](classf3d_1_1engine.md#classf3d_1_1engine_1a763538a512e6405aa5d05de6eef8e43e) Function
  * [operator=](classf3d_1_1engine.md#classf3d_1_1engine_1a4755881d465474f30bda5b7f1b630ecf) Function
  * [operator=](classf3d_1_1engine.md#classf3d_1_1engine_1a99cd2684bdd36a245b947075cb28dfa5) Function
  * [setCachePath](classf3d_1_1engine.md#classf3d_1_1engine_1a4883c97389b1ab88d606e138d969611a) Function
  * [setOptions](classf3d_1_1engine.md#classf3d_1_1engine_1ac4f1d538ed3b0f29c4730893208689df) Function
  * [setOptions](classf3d_1_1engine.md#classf3d_1_1engine_1ac59b6c8c87b1b671b8c7f55d0d7cc6d9) Function
  * [getOptions](classf3d_1_1engine.md#classf3d_1_1engine_1a412f027391ddf8a752eb9230ae30986a) Function
  * [getWindow](classf3d_1_1engine.md#classf3d_1_1engine_1a621751cc41669de47c318b6f20ec0cd7) Function
  * [getScene](classf3d_1_1engine.md#classf3d_1_1engine_1a7de2279c63696943a16c8995f6fbbc82) Function
  * [getInteractor](classf3d_1_1engine.md#classf3d_1_1engine_1aaa84654442772987a9d233ed1ca8e113) Function
  * [engine](classf3d_1_1engine.md#classf3d_1_1engine_1ace9f4b7a546a1be097355df320bf0953) Function
* [f3d::exception](structf3d_1_1exception.md) Class
  * [exception](structf3d_1_1exception.md#structf3d_1_1exception_1aef4c85042406694200c7f8793785692d) Function
* [f3d::utils::glob\_exception](structf3d_1_1utils_1_1glob__exception.md) Structure
  * [glob\_exception](structf3d_1_1utils_1_1glob__exception.md#structf3d_1_1utils_1_1glob__exception_1aabe348542f8fb983670e0871892166b9) Function
* [f3d::options::render::grid](structf3d_1_1options_1_1render_1_1grid.md) Structure
  * [absolute](structf3d_1_1options_1_1render_1_1grid.md#structf3d_1_1options_1_1render_1_1grid_1ae488bf218987600f649b068f9dbe42dd) Variable
  * [color](structf3d_1_1options_1_1render_1_1grid.md#structf3d_1_1options_1_1render_1_1grid_1afabbc758f560678486c7a767791bbb00) Variable
  * [enable](structf3d_1_1options_1_1render_1_1grid.md#structf3d_1_1options_1_1render_1_1grid_1a8103928ee8571d9fd207c3b00c23b8ea) Variable
  * [subdivisions](structf3d_1_1options_1_1render_1_1grid.md#structf3d_1_1options_1_1render_1_1grid_1a21af5f4e4d4de08175b66e348fc383d0) Variable
  * [unit](structf3d_1_1options_1_1render_1_1grid.md#structf3d_1_1options_1_1render_1_1grid_1a36c0cd39a1804e9f73f6ed715a7350d7) Variable
* [f3d::options::incompatible\_exception](structf3d_1_1options_1_1incompatible__exception.md) Structure
  * [incompatible\_exception](structf3d_1_1options_1_1incompatible__exception.md#structf3d_1_1options_1_1incompatible__exception_1a01c418f614d55e39981d7a0e223a0019) Function
* [f3d::options::render::hdri](structf3d_1_1options_1_1render_1_1hdri.md) Structure
  * [ambient](structf3d_1_1options_1_1render_1_1hdri.md#structf3d_1_1options_1_1render_1_1hdri_1ae52e1bf0f408631def5fce25c447eeff) Variable
  * [file](structf3d_1_1options_1_1render_1_1hdri.md#structf3d_1_1options_1_1render_1_1hdri_1af35a37bc9fc02d0dee17d7fd24487b54) Variable
* [f3d::image](classf3d_1_1image.md) Class
  * [image](classf3d_1_1image.md#classf3d_1_1image_1aefc24a2599c90b88461892a9010b2521) Function
  * [~image](classf3d_1_1image.md#classf3d_1_1image_1a22ecd909c5406f00af4ecab8c5f65924) Function
  * [image](classf3d_1_1image.md#classf3d_1_1image_1a3018cb02119749352d3b43c8b2fbb4c0) Function
  * [operator=](classf3d_1_1image.md#classf3d_1_1image_1a8c88a096697c62b4d82c9874ade2a2b6) Function
  * [image](classf3d_1_1image.md#classf3d_1_1image_1a849dfd623e0fd30b8423a8428ce6683a) Function
  * [operator=](classf3d_1_1image.md#classf3d_1_1image_1ad7b6c7999638d424bae865edea71075f) Function
  * [operator==](classf3d_1_1image.md#classf3d_1_1image_1a9946310d12ccca5d8524eb99686c7852) Function
  * [operator!=](classf3d_1_1image.md#classf3d_1_1image_1a0117eff18734cc22b4658d9b5cf9ffcf) Function
  * [getWidth](classf3d_1_1image.md#classf3d_1_1image_1ae59d1943a87a24c48919beb3ee4c50cd) Function
  * [getHeight](classf3d_1_1image.md#classf3d_1_1image_1a1f3cede0d5c810d273d9406fbe9c9f88) Function
  * [getChannelCount](classf3d_1_1image.md#classf3d_1_1image_1a02cc5b09cf3d682b918ab7d6928dd74a) Function
  * [setContent](classf3d_1_1image.md#classf3d_1_1image_1a0a410810b64e6d7169ca1326d7e1bd28) Function
  * [getContent](classf3d_1_1image.md#classf3d_1_1image_1a846017e60bf8ad4518de086a30796089) Function
  * [SaveFormat](classf3d_1_1image.md#classf3d_1_1image_1a3965ccbe6b7c763e623ea98458bf0c3f) Enumeration type
  * [PNG](classf3d_1_1image.md#classf3d_1_1image_1a3965ccbe6b7c763e623ea98458bf0c3fa55505ba281b015ec31f03ccb151b2a34) Enumerator
  * [JPG](classf3d_1_1image.md#classf3d_1_1image_1a3965ccbe6b7c763e623ea98458bf0c3fa92769fe7c40229f4301d6125e0a9e928) Enumerator
  * [TIF](classf3d_1_1image.md#classf3d_1_1image_1a3965ccbe6b7c763e623ea98458bf0c3fa9442880680eb5d7fb60d15f422004547) Enumerator
  * [BMP](classf3d_1_1image.md#classf3d_1_1image_1a3965ccbe6b7c763e623ea98458bf0c3faa5d5ca1447586e23dc011f8c0cc0a6db) Enumerator
  * [ChannelType](classf3d_1_1image.md#classf3d_1_1image_1a3a84fa8e32dc1597a5589865654e65f4) Enumeration type
  * [BYTE](classf3d_1_1image.md#classf3d_1_1image_1a3a84fa8e32dc1597a5589865654e65f4ae409eb2ba6eb6801f52763ae370c350e) Enumerator
  * [SHORT](classf3d_1_1image.md#classf3d_1_1image_1a3a84fa8e32dc1597a5589865654e65f4aa35c2b02966b1563e5bf7b81b8b0cf77) Enumerator
  * [FLOAT](classf3d_1_1image.md#classf3d_1_1image_1a3a84fa8e32dc1597a5589865654e65f4ae738c26bf4ce1037fa81b039a915cbf6) Enumerator
  * [Internals](classf3d_1_1image.md#classf3d_1_1image_1ab77091bd6d48ad000c32e3435a668566) Variable
  * [image](classf3d_1_1image.md#classf3d_1_1image_1ab94585a274b65994972b88e35884f34a) Function
  * [image](classf3d_1_1image.md#classf3d_1_1image_1a86af78ae19a5d661fd4d91ea6d27d5b3) Function
  * [getNormalizedPixel](classf3d_1_1image.md#classf3d_1_1image_1a743f3828f85e1f0bc1f582d7d798d094) Function
  * [getChannelType](classf3d_1_1image.md#classf3d_1_1image_1aa8740c8c109540e99c31e88ac1f28987) Function
  * [getChannelTypeSize](classf3d_1_1image.md#classf3d_1_1image_1a81c2f37a735c1d4c8a6b066f83674712) Function
  * [compare](classf3d_1_1image.md#classf3d_1_1image_1a49d3d5c99d0a1cb014e6c3392caa9f45) Function
  * [save](classf3d_1_1image.md#classf3d_1_1image_1a1c671d94e024662f0931168ced58e4da) Function
  * [saveBuffer](classf3d_1_1image.md#classf3d_1_1image_1ae52106bbd1dd8572276befea251b06df) Function
  * [toTerminalText](classf3d_1_1image.md#classf3d_1_1image_1adf1f0fbdabe4f57e64b3a903b15ad7ee) Function
  * [toTerminalText](classf3d_1_1image.md#classf3d_1_1image_1a73c7e3090c75126b2f5bc03b9a57d3b6) Function
  * [setMetadata](classf3d_1_1image.md#classf3d_1_1image_1ad1e9fd5f8f94f12d5d6a9e84c59adf11) Function
  * [getMetadata](classf3d_1_1image.md#classf3d_1_1image_1a9e10e64f8bde29faaba00e00d134e60f) Function
  * [allMetadata](classf3d_1_1image.md#classf3d_1_1image_1a253f66210d3ffee1e3810ed850965859) Function
  * [getSupportedFormats](classf3d_1_1image.md#classf3d_1_1image_1a7172165ee5c5b19d15a94914becc4a12) Function
* [f3d::options::inexistent\_exception](structf3d_1_1options_1_1inexistent__exception.md) Structure
  * [inexistent\_exception](structf3d_1_1options_1_1inexistent__exception.md#structf3d_1_1options_1_1inexistent__exception_1a709b2f34f7c2bea677e71bfa3cae39e3) Function
* [f3d::interaction\_bind\_t](structf3d_1_1interaction__bind__t.md) Structure
  * [ModifierKeys](structf3d_1_1interaction__bind__t.md#structf3d_1_1interaction__bind__t_1a2880a58d8f83f045aa09e4ec831fea34) Enumeration type
  * [ANY](structf3d_1_1interaction__bind__t.md#structf3d_1_1interaction__bind__t_1a2880a58d8f83f045aa09e4ec831fea34a8e1bde3c3d303163521522cf1d62f21f) Enumerator
  * [NONE](structf3d_1_1interaction__bind__t.md#structf3d_1_1interaction__bind__t_1a2880a58d8f83f045aa09e4ec831fea34ab50339a10e1de285ac99d4c3990b8693) Enumerator
  * [CTRL](structf3d_1_1interaction__bind__t.md#structf3d_1_1interaction__bind__t_1a2880a58d8f83f045aa09e4ec831fea34a32f7eee2581c72a5561c21df3013a89a) Enumerator
  * [SHIFT](structf3d_1_1interaction__bind__t.md#structf3d_1_1interaction__bind__t_1a2880a58d8f83f045aa09e4ec831fea34a46afff2b309b8b16a46d812172a9235c) Enumerator
  * [CTRL\_SHIFT](structf3d_1_1interaction__bind__t.md#structf3d_1_1interaction__bind__t_1a2880a58d8f83f045aa09e4ec831fea34ab99320973a4dd4f1f442037248dcaf8f) Enumerator
  * [mod](structf3d_1_1interaction__bind__t.md#structf3d_1_1interaction__bind__t_1a65b5e074b63fbbfa01b35e5edddf9513) Variable
  * [inter](structf3d_1_1interaction__bind__t.md#structf3d_1_1interaction__bind__t_1a1fc8a5b848dea0d130986d1c55ec4afa) Variable
  * [operator\<](structf3d_1_1interaction__bind__t.md#structf3d_1_1interaction__bind__t_1a8eb647fcb004f4d79a900f685ec61b2c) Function
  * [operator==](structf3d_1_1interaction__bind__t.md#structf3d_1_1interaction__bind__t_1a64a19a262ebd0f0c75757d458306285b) Function
  * [format](structf3d_1_1interaction__bind__t.md#structf3d_1_1interaction__bind__t_1ada344efb3314a4980cae5a76ba0eceb9) Function
  * [parse](structf3d_1_1interaction__bind__t.md#structf3d_1_1interaction__bind__t_1a2e76d79fb88e1dfb682b51c41d259349) Function
* [f3d::interactor](classf3d_1_1interactor.md) Class
  * [BindingType](classf3d_1_1interactor.md#classf3d_1_1interactor_1abdd1b2c798fa2f1bc37ca5f56e671e9e) Enumeration type
  * [CYCLIC](classf3d_1_1interactor.md#classf3d_1_1interactor_1abdd1b2c798fa2f1bc37ca5f56e671e9eab970fa647bc2f4761a80276428780061) Enumerator
  * [NUMERICAL](classf3d_1_1interactor.md#classf3d_1_1interactor_1abdd1b2c798fa2f1bc37ca5f56e671e9ea3a5e2d78492ca47b9db502227af9d76a) Enumerator
  * [TOGGLE](classf3d_1_1interactor.md#classf3d_1_1interactor_1abdd1b2c798fa2f1bc37ca5f56e671e9ea1252c45651289c0b553a30d27bb5ae9b) Enumerator
  * [OTHER](classf3d_1_1interactor.md#classf3d_1_1interactor_1abdd1b2c798fa2f1bc37ca5f56e671e9ea03570470bad94692ce93e32700d2e1cb) Enumerator
  * [documentation\_callback\_t](classf3d_1_1interactor.md#classf3d_1_1interactor_1a0da4a08de781bf1594885d5e47f3bad0) Typedef
  * [initBindings](classf3d_1_1interactor.md#classf3d_1_1interactor_1a5c846fc542b9f211f62c657a9c9afc04) Function
  * [addBinding](classf3d_1_1interactor.md#classf3d_1_1interactor_1a623aa8e44854c1a9d6de1dd49ff39e64) Function
  * [addBinding](classf3d_1_1interactor.md#classf3d_1_1interactor_1a6f3b7851d7a66b911f8084d220cf0e24) Function
  * [addBinding](classf3d_1_1interactor.md#classf3d_1_1interactor_1a73af47683b6965382c3d7baa490d390a) Function
  * [removeBinding](classf3d_1_1interactor.md#classf3d_1_1interactor_1a5ddd284c44e8522302e5154ab5f299ff) Function
  * [getBindGroups](classf3d_1_1interactor.md#classf3d_1_1interactor_1a88e9812cf827a4b7aaf8ff9204fb014b) Function
  * [getBindsForGroup](classf3d_1_1interactor.md#classf3d_1_1interactor_1a1677a80780efb32ae5416244b911eed8) Function
  * [getBinds](classf3d_1_1interactor.md#classf3d_1_1interactor_1a1e1c1ce203738615db14c86b953a1b7b) Function
  * [getBindingDocumentation](classf3d_1_1interactor.md#classf3d_1_1interactor_1a51f4448cd8d473a36d5c8c47fc6c0c35) Function
  * [getBindingType](classf3d_1_1interactor.md#classf3d_1_1interactor_1a2428ea38b7fe65eeaa925bdce4cefa17) Function
  * [MouseButton](classf3d_1_1interactor.md#classf3d_1_1interactor_1a139b5304356e4ec448c1a2f0b30f5ca4) Enumeration type
  * [LEFT](classf3d_1_1interactor.md#classf3d_1_1interactor_1a139b5304356e4ec448c1a2f0b30f5ca4a684d325a7303f52e64011467ff5c5758) Enumerator
  * [RIGHT](classf3d_1_1interactor.md#classf3d_1_1interactor_1a139b5304356e4ec448c1a2f0b30f5ca4a21507b40c80068eda19865706fdc2403) Enumerator
  * [MIDDLE](classf3d_1_1interactor.md#classf3d_1_1interactor_1a139b5304356e4ec448c1a2f0b30f5ca4a43eedd8685eb86592022f8da962e3474) Enumerator
  * [WheelDirection](classf3d_1_1interactor.md#classf3d_1_1interactor_1adebcd9542f77a81f07c4bce98dfa73e6) Enumeration type
  * [FORWARD](classf3d_1_1interactor.md#classf3d_1_1interactor_1adebcd9542f77a81f07c4bce98dfa73e6abfec72bb37910c61f36b6c29a1f7ec31) Enumerator
  * [BACKWARD](classf3d_1_1interactor.md#classf3d_1_1interactor_1adebcd9542f77a81f07c4bce98dfa73e6a6377b4908ae38f9a57fe9120cf179eb1) Enumerator
  * [LEFT](classf3d_1_1interactor.md#classf3d_1_1interactor_1adebcd9542f77a81f07c4bce98dfa73e6a684d325a7303f52e64011467ff5c5758) Enumerator
  * [RIGHT](classf3d_1_1interactor.md#classf3d_1_1interactor_1adebcd9542f77a81f07c4bce98dfa73e6a21507b40c80068eda19865706fdc2403) Enumerator
  * [InputAction](classf3d_1_1interactor.md#classf3d_1_1interactor_1a5c52dc4bedb695d4853b843a3257204c) Enumeration type
  * [PRESS](classf3d_1_1interactor.md#classf3d_1_1interactor_1a5c52dc4bedb695d4853b843a3257204ca93146f537356b7396d2f0413cf0bfc9e) Enumerator
  * [RELEASE](classf3d_1_1interactor.md#classf3d_1_1interactor_1a5c52dc4bedb695d4853b843a3257204ca7d649ef069df9885e382417c79f3d5cd) Enumerator
  * [InputModifier](classf3d_1_1interactor.md#classf3d_1_1interactor_1a6b7cf5f64ee8812854766738325782ad) Enumeration type
  * [NONE](classf3d_1_1interactor.md#classf3d_1_1interactor_1a6b7cf5f64ee8812854766738325782adab50339a10e1de285ac99d4c3990b8693) Enumerator
  * [CTRL](classf3d_1_1interactor.md#classf3d_1_1interactor_1a6b7cf5f64ee8812854766738325782ada32f7eee2581c72a5561c21df3013a89a) Enumerator
  * [SHIFT](classf3d_1_1interactor.md#classf3d_1_1interactor_1a6b7cf5f64ee8812854766738325782ada46afff2b309b8b16a46d812172a9235c) Enumerator
  * [CTRL\_SHIFT](classf3d_1_1interactor.md#classf3d_1_1interactor_1a6b7cf5f64ee8812854766738325782adab99320973a4dd4f1f442037248dcaf8f) Enumerator
  * [triggerModUpdate](classf3d_1_1interactor.md#classf3d_1_1interactor_1aae1a76b389b65b8a9a19ef07fab11e8e) Function
  * [triggerMouseButton](classf3d_1_1interactor.md#classf3d_1_1interactor_1a13f4308317204095482bbd3fe59efea1) Function
  * [triggerMousePosition](classf3d_1_1interactor.md#classf3d_1_1interactor_1a8f6fe4e7a4daabecb9c7e0bb48640dc8) Function
  * [triggerMouseWheel](classf3d_1_1interactor.md#classf3d_1_1interactor_1a3221678893461c3186a75861bef7bf33) Function
  * [triggerKeyboardKey](classf3d_1_1interactor.md#classf3d_1_1interactor_1a7a3b0e57d18d3cafcafe0d65c00d17cb) Function
  * [triggerTextCharacter](classf3d_1_1interactor.md#classf3d_1_1interactor_1af6f808f87468f7e99a5b351f5f09d99b) Function
  * [command\_documentation\_t](classf3d_1_1interactor.md#classf3d_1_1interactor_1a8b22627ae6305bfb27a1000ebdd21c09) Typedef
  * [initCommands](classf3d_1_1interactor.md#classf3d_1_1interactor_1a3a0fc5893095224be3345be17b4dc6dd) Function
  * [addCommand](classf3d_1_1interactor.md#classf3d_1_1interactor_1a15fd84bdc0bddae3cb4c3873e01c9e87) Function
  * [removeCommand](classf3d_1_1interactor.md#classf3d_1_1interactor_1a358acbd4fa57a835d94b1ce0e6316986) Function
  * [getCommandActions](classf3d_1_1interactor.md#classf3d_1_1interactor_1a68f1196003c42ca6d3514ca4eacbfdbe) Function
  * [triggerCommand](classf3d_1_1interactor.md#classf3d_1_1interactor_1a20ab155181432751c7644b87490a1085) Function
  * [toggleAnimation](classf3d_1_1interactor.md#classf3d_1_1interactor_1aa4f9891117fb5758df61613ef7f8da30) Function
  * [startAnimation](classf3d_1_1interactor.md#classf3d_1_1interactor_1a34b132bcee0d069dc23f051f2d5b5a91) Function
  * [stopAnimation](classf3d_1_1interactor.md#classf3d_1_1interactor_1aa233327057f5ad0e0a8c278ed8aec8c8) Function
  * [isPlayingAnimation](classf3d_1_1interactor.md#classf3d_1_1interactor_1a4c1b56b4ec237630491274511a17fe8e) Function
  * [enableCameraMovement](classf3d_1_1interactor.md#classf3d_1_1interactor_1afc9f9301857e092abf2d92e38a94915e) Function
  * [disableCameraMovement](classf3d_1_1interactor.md#classf3d_1_1interactor_1a07f159edfbb3907a7e72307de5043599) Function
  * [playInteraction](classf3d_1_1interactor.md#classf3d_1_1interactor_1a1ed1405954d49fcee5e687a56cc83bf1) Function
  * [recordInteraction](classf3d_1_1interactor.md#classf3d_1_1interactor_1a22d9604dde214323080fae5ab947e08b) Function
  * [start](classf3d_1_1interactor.md#classf3d_1_1interactor_1af971c61f5dd60430a8f574f9572c8aed) Function
  * [stop](classf3d_1_1interactor.md#classf3d_1_1interactor_1ab8172c398e25b753a421e6b38f568539) Function
  * [requestRender](classf3d_1_1interactor.md#classf3d_1_1interactor_1a12abd21c1a1fb5973e09633c877e2e7a) Function
* [f3d::options::interactor](structf3d_1_1options_1_1interactor.md) Structure
  * [invert\_zoom](structf3d_1_1options_1_1interactor.md#structf3d_1_1options_1_1interactor_1a51efd48124f91472c68c78209d966b80) Variable
  * [trackball](structf3d_1_1options_1_1interactor.md#structf3d_1_1options_1_1interactor_1a36aa5b6cc5667b149b037fbb0ea758ae) Variable
* [f3d::scene::light\_exception](structf3d_1_1scene_1_1light__exception.md) Structure
  * [light\_exception](structf3d_1_1scene_1_1light__exception.md#structf3d_1_1scene_1_1light__exception_1acd6c3a9a9db4c724d13df35fa1a455ed) Function
* [f3d::interactor::invalid\_args\_exception](structf3d_1_1interactor_1_1invalid__args__exception.md) Structure
  * [invalid\_args\_exception](structf3d_1_1interactor_1_1invalid__args__exception.md#structf3d_1_1interactor_1_1invalid__args__exception_1ac50a14b6ce17534752862bf4d9f562a8) Function
* [f3d::options::render::light](structf3d_1_1options_1_1render_1_1light.md) Structure
  * [intensity](structf3d_1_1options_1_1render_1_1light.md#structf3d_1_1options_1_1render_1_1light_1a7c3dde26359761f7150d726128ef4714) Variable
* [f3d::light\_state\_t](structf3d_1_1light__state__t.md) Structure
  * [type](structf3d_1_1light__state__t.md#structf3d_1_1light__state__t_1a9686287a8a646fcbb4d1071f78165a11) Variable
  * [position](structf3d_1_1light__state__t.md#structf3d_1_1light__state__t_1a54a1ed683ee594e405061ed1f7502b4a) Variable
  * [color](structf3d_1_1light__state__t.md#structf3d_1_1light__state__t_1adbbb786c2bcf02d19a4cec2f4c754633) Variable
  * [direction](structf3d_1_1light__state__t.md#structf3d_1_1light__state__t_1afaac12a01b4b165cf25d3dffa056a465) Variable
  * [positionalLight](structf3d_1_1light__state__t.md#structf3d_1_1light__state__t_1a953b11665623a73c83dffe27238b6b24) Variable
  * [intensity](structf3d_1_1light__state__t.md#structf3d_1_1light__state__t_1ac67bbfa7a078033cf9e97b0648bb15d6) Variable
  * [switchState](structf3d_1_1light__state__t.md#structf3d_1_1light__state__t_1a9ed6434bb4f3a39aa97d9d79b9175b9a) Variable
  * [operator==](structf3d_1_1light__state__t.md#structf3d_1_1light__state__t_1aa0c6bb838ea67037f4a318549da66168) Function
* [f3d::engine::libInformation](structf3d_1_1engine_1_1libInformation.md) Structure
  * [Version](structf3d_1_1engine_1_1libInformation.md#structf3d_1_1engine_1_1libInformation_1a77e76b84e18488fd4cbc69011632809c) Variable
  * [VersionFull](structf3d_1_1engine_1_1libInformation.md#structf3d_1_1engine_1_1libInformation_1a22ab02e3f1d8e92fbd4e391bdbab16ee) Variable
  * [BuildDate](structf3d_1_1engine_1_1libInformation.md#structf3d_1_1engine_1_1libInformation_1a96f5421664b16f4911a2a244a5b17130) Variable
  * [BuildSystem](structf3d_1_1engine_1_1libInformation.md#structf3d_1_1engine_1_1libInformation_1a9bc8f08c8a6a54d8c398db63a100f103) Variable
  * [Compiler](structf3d_1_1engine_1_1libInformation.md#structf3d_1_1engine_1_1libInformation_1a89403217bdae41dc3cb2af5a46123fc2) Variable
  * [Modules](structf3d_1_1engine_1_1libInformation.md#structf3d_1_1engine_1_1libInformation_1ae91661d2e5ec8af1db9b73ac3a38fe45) Variable
  * [VTKVersion](structf3d_1_1engine_1_1libInformation.md#structf3d_1_1engine_1_1libInformation_1ae18443c52968409bbba45aa86ecbe116) Variable
  * [Copyrights](structf3d_1_1engine_1_1libInformation.md#structf3d_1_1engine_1_1libInformation_1aa5fcaf4da0e499f963511197bafcaa68) Variable
  * [License](structf3d_1_1engine_1_1libInformation.md#structf3d_1_1engine_1_1libInformation_1aa1fc55f2019aefc29181dc1220d29093) Variable
* [f3d::scene::load\_failure\_exception](structf3d_1_1scene_1_1load__failure__exception.md) Structure
  * [load\_failure\_exception](structf3d_1_1scene_1_1load__failure__exception.md#structf3d_1_1scene_1_1load__failure__exception_1ac9d2e898967ab161709bc871afc4e0a7) Function
* [f3d::utils::string\_template::lookup\_error](structf3d_1_1utils_1_1string__template_1_1lookup__error.md) Structure
  * [lookup\_error](structf3d_1_1utils_1_1string__template_1_1lookup__error.md#structf3d_1_1utils_1_1string__template_1_1lookup__error_1ace69fe341e39403ce1ac61a1e8ded114) Function
* [f3d::log](classf3d_1_1log.md) Class
  * [VerboseLevel](classf3d_1_1log.md#classf3d_1_1log_1acd0826518d1036fcae9e3eddb210ec28) Enumeration type
  * [DEBUG](classf3d_1_1log.md#classf3d_1_1log_1acd0826518d1036fcae9e3eddb210ec28adc30ec20708ef7b0f641ef78b7880a15) Enumerator
  * [INFO](classf3d_1_1log.md#classf3d_1_1log_1acd0826518d1036fcae9e3eddb210ec28a551b723eafd6a31d444fcb2f5920fbd3) Enumerator
  * [WARN](classf3d_1_1log.md#classf3d_1_1log_1acd0826518d1036fcae9e3eddb210ec28a32bd8a1db2275458673903bdb84cb277) Enumerator
  * [ERROR](classf3d_1_1log.md#classf3d_1_1log_1acd0826518d1036fcae9e3eddb210ec28abb1ca97ec761fc37101737ba0aa2e7c5) Enumerator
  * [QUIET](classf3d_1_1log.md#classf3d_1_1log_1acd0826518d1036fcae9e3eddb210ec28a1b4462755110ae77a3bb7e319f6544fa) Enumerator
  * [print](classf3d_1_1log.md#classf3d_1_1log_1a00a2ff2ea22fa4a51337802440ba3ee7) Function
  * [debug](classf3d_1_1log.md#classf3d_1_1log_1a02f284fc14964d408428a6cfb816941d) Function
  * [info](classf3d_1_1log.md#classf3d_1_1log_1abc356594e60fc5aaa23dc89890e3e95a) Function
  * [warn](classf3d_1_1log.md#classf3d_1_1log_1a38f616ec652987ae562353e4f030273d) Function
  * [error](classf3d_1_1log.md#classf3d_1_1log_1a7cfc1246ee782202b6145a7e9e9e8752) Function
  * [setUseColoring](classf3d_1_1log.md#classf3d_1_1log_1a53fe829551853d63206efb6a93287bec) Function
  * [setVerboseLevel](classf3d_1_1log.md#classf3d_1_1log_1a42acb3b11578123d01b58420ebff5d65) Function
  * [getVerboseLevel](classf3d_1_1log.md#classf3d_1_1log_1a8fedb73d694ea0b04845b59c03bb5a62) Function
* [f3d::context::loading\_exception](structf3d_1_1context_1_1loading__exception.md) Structure
  * [loading\_exception](structf3d_1_1context_1_1loading__exception.md#structf3d_1_1context_1_1loading__exception_1ad8bf27581245eff871b457f9d184dbf2) Function
* [f3d::options::model::matcap](structf3d_1_1options_1_1model_1_1matcap.md) Structure
  * [texture](structf3d_1_1options_1_1model_1_1matcap.md#structf3d_1_1options_1_1model_1_1matcap_1a1384d51f8f1621e3cc1860ca2c15b33e) Variable
* [f3d::options::model](structf3d_1_1options_1_1model.md) Structure
  * [color](structf3d_1_1options_1_1model.md#structf3d_1_1options_1_1model_1af431816844fcf2363c491cae36ae27a3) Variable
  * [emissive](structf3d_1_1options_1_1model.md#structf3d_1_1options_1_1model_1a8576319993b667a32f791126bee11b47) Variable
  * [matcap](structf3d_1_1options_1_1model.md#structf3d_1_1options_1_1model_1acfddb706b49f026263e6d0c4d1d0b07f) Variable
  * [material](structf3d_1_1options_1_1model.md#structf3d_1_1options_1_1model_1a9e2da200d13d4bda02caa6cc004c8cc4) Variable
  * [normal](structf3d_1_1options_1_1model.md#structf3d_1_1options_1_1model_1ae1ad2f7a6c8deae51b7b4074160a20e9) Variable
  * [point\_sprites](structf3d_1_1options_1_1model.md#structf3d_1_1options_1_1model_1aefc3dad289eb1460139d71ea5ae9fdb6) Variable
  * [scivis](structf3d_1_1options_1_1model.md#structf3d_1_1options_1_1model_1a26daeb95647332f6e04250b4dcc07a38) Variable
  * [textures\_transform](structf3d_1_1options_1_1model.md#structf3d_1_1options_1_1model_1a2b8efc944525703ee71255da231ff02e) Variable
  * [volume](structf3d_1_1options_1_1model.md#structf3d_1_1options_1_1model_1adf879ca381172543f8eb5087fd1127a7) Variable
* [f3d::engine::no\_interactor\_exception](structf3d_1_1engine_1_1no__interactor__exception.md) Structure
  * [no\_interactor\_exception](structf3d_1_1engine_1_1no__interactor__exception.md#structf3d_1_1engine_1_1no__interactor__exception_1ab6af47fb76e7a030e2cd4353387277e3) Function
* [f3d::mesh\_t](structf3d_1_1mesh__t.md) Structure
  * [points](structf3d_1_1mesh__t.md#structf3d_1_1mesh__t_1aae9562d60d312a986f8a0d0f61bd4d3c) Variable
  * [normals](structf3d_1_1mesh__t.md#structf3d_1_1mesh__t_1ad0b4a90786f214a89dbae5b2d8468e59) Variable
  * [texture\_coordinates](structf3d_1_1mesh__t.md#structf3d_1_1mesh__t_1a5c2cd44ccd008d9f258dc74e4bb074bd) Variable
  * [face\_sides](structf3d_1_1mesh__t.md#structf3d_1_1mesh__t_1a40e1735ee41d5c088e446dce73214d31) Variable
  * [face\_indices](structf3d_1_1mesh__t.md#structf3d_1_1mesh__t_1a309630f63c3f2105e70e079f777f0c81) Variable
  * [isValid](structf3d_1_1mesh__t.md#structf3d_1_1mesh__t_1a16d9b017479bf3e65e3d50e5081916eb) Function
* [f3d::options::no\_value\_exception](structf3d_1_1options_1_1no__value__exception.md) Structure
  * [no\_value\_exception](structf3d_1_1options_1_1no__value__exception.md#structf3d_1_1options_1_1no__value__exception_1aec096654198ece1c092d4f5db8950a8d) Function
* [f3d::engine::no\_window\_exception](structf3d_1_1engine_1_1no__window__exception.md) Structure
  * [no\_window\_exception](structf3d_1_1engine_1_1no__window__exception.md#structf3d_1_1engine_1_1no__window__exception_1a696bd4e971733f40df2d91c2a8ff0f64) Function
* [f3d::options](classf3d_1_1options.md) Class
  * [options](classf3d_1_1options.md#classf3d_1_1options_1ac7d2a41fa0d89a27674fce76f097df07) Function
  * [~options](classf3d_1_1options.md#classf3d_1_1options_1a4f9b6f55863744717bfcca64c0d2db10) Function
  * [options](classf3d_1_1options.md#classf3d_1_1options_1a1b05085aaa9b359e26bf1dc34c447277) Function
  * [operator=](classf3d_1_1options.md#classf3d_1_1options_1aaa79aa9d8182451fef7dbea10b3de64a) Function
  * [options](classf3d_1_1options.md#classf3d_1_1options_1aaf9453ef24d28f1da697afbcfa65e67a) Function
  * [operator=](classf3d_1_1options.md#classf3d_1_1options_1a069f395f37e24c1b7158467d09b0e379) Function
  * [interactor](classf3d_1_1options.md#classf3d_1_1options_1aa287e68c8f75c10e32a1b1c99cd5478b) Variable
  * [model](classf3d_1_1options.md#classf3d_1_1options_1a8cc373e7f784206675a0eb539484b1c6) Variable
  * [render](classf3d_1_1options.md#classf3d_1_1options_1a032db47739d7efcabeb5dcea65c9a649) Variable
  * [scene](classf3d_1_1options.md#classf3d_1_1options_1a10ce695a833bd835305c60377c627ec3) Variable
  * [ui](classf3d_1_1options.md#classf3d_1_1options_1a2f4da5927f7441605182f4e33b4d5a51) Variable
  * [set](classf3d_1_1options.md#classf3d_1_1options_1a863b0153b83210d422a4a6e3012a2590) Function
  * [get](classf3d_1_1options.md#classf3d_1_1options_1a340535d7dceb9fced1c19b6571d91f81) Function
  * [setAsString](classf3d_1_1options.md#classf3d_1_1options_1a5224e2d850dbb2b811bf00eb3e2d390c) Function
  * [getAsString](classf3d_1_1options.md#classf3d_1_1options_1a4a238691779258bf860cf1dcd455b41e) Function
  * [toggle](classf3d_1_1options.md#classf3d_1_1options_1add0d53143dc8f3d3bf8d7770c0585de7) Function
  * [isSame](classf3d_1_1options.md#classf3d_1_1options_1a4fb9ff49cd54cf5e8c03ac412e734fbd) Function
  * [hasValue](classf3d_1_1options.md#classf3d_1_1options_1aa907225ddee7f51c844fea9eef7728a1) Function
  * [copy](classf3d_1_1options.md#classf3d_1_1options_1ab9d687afd0665f68274b4bbe6b7d11f5) Function
  * [getNames](classf3d_1_1options.md#classf3d_1_1options_1ab3b98399029bd7437fcae7b4b43ce5bf) Function
  * [getClosestOption](classf3d_1_1options.md#classf3d_1_1options_1a115a0c9d76e250657283bb195a4428ee) Function
  * [isOptional](classf3d_1_1options.md#classf3d_1_1options_1ae075b953f83e90773333b1cd447b918e) Function
  * [reset](classf3d_1_1options.md#classf3d_1_1options_1a14b30525d9a905087449bf89eff38634) Function
  * [removeValue](classf3d_1_1options.md#classf3d_1_1options_1af4a3df470307fca3f27f0b6be9069b11) Function
  * [getAllNames](classf3d_1_1options.md#classf3d_1_1options_1a722119028984f674b21abecaef51f859) Function
  * [parse](classf3d_1_1options.md#classf3d_1_1options_1ad95e308431a7bf07c4dc1454ee90d4e6) Function
  * [format](classf3d_1_1options.md#classf3d_1_1options_1a5c84338393f315d46e82a697cb65f410) Function
* [f3d::options::model::normal](structf3d_1_1options_1_1model_1_1normal.md) Structure
  * [scale](structf3d_1_1options_1_1model_1_1normal.md#structf3d_1_1options_1_1model_1_1normal_1adf36b79f2b2a5886b88ccd5865b6ef44) Variable
  * [texture](structf3d_1_1options_1_1model_1_1normal.md#structf3d_1_1options_1_1model_1_1normal_1a1d99f885535bd92d3ad430596d954d1d) Variable
* [f3d::options::parsing\_exception](structf3d_1_1options_1_1parsing__exception.md) Structure
  * [parsing\_exception](structf3d_1_1options_1_1parsing__exception.md#structf3d_1_1options_1_1parsing__exception_1a2bd70a7c8381df3df1aca091bd3c71cc) Function
* [f3d::point3\_t](structf3d_1_1point3__t.md) Structure
* [f3d::engine::plugin\_exception](structf3d_1_1engine_1_1plugin__exception.md) Structure
  * [plugin\_exception](structf3d_1_1engine_1_1plugin__exception.md#structf3d_1_1engine_1_1plugin__exception_1a912959867189cd1c31a315af92278119) Function
* [f3d::image::metadata\_exception](structf3d_1_1image_1_1metadata__exception.md) Structure
  * [metadata\_exception](structf3d_1_1image_1_1metadata__exception.md#structf3d_1_1image_1_1metadata__exception_1a9752d5ec2bd62827529058654e0c9ce7) Function
* [f3d::options::render::raytracing](structf3d_1_1options_1_1render_1_1raytracing.md) Structure
  * [denoise](structf3d_1_1options_1_1render_1_1raytracing.md#structf3d_1_1options_1_1render_1_1raytracing_1ac3a92729e19de09a1c3f104ac1a4842f) Variable
  * [enable](structf3d_1_1options_1_1render_1_1raytracing.md#structf3d_1_1options_1_1render_1_1raytracing_1a3832be90cd41271078744a0e9fa0f918) Variable
  * [samples](structf3d_1_1options_1_1render_1_1raytracing.md#structf3d_1_1options_1_1render_1_1raytracing_1aff2952d83334ceb714ad46a973104ddb) Variable
* [f3d::options::model::point\_sprites](structf3d_1_1options_1_1model_1_1point__sprites.md) Structure
  * [enable](structf3d_1_1options_1_1model_1_1point__sprites.md#structf3d_1_1options_1_1model_1_1point__sprites_1aa061491718fe61349eb0a348d0295288) Variable
  * [size](structf3d_1_1options_1_1model_1_1point__sprites.md#structf3d_1_1options_1_1model_1_1point__sprites_1a1a5a95b925c2051c4923e67eb43c0db3) Variable
  * [type](structf3d_1_1options_1_1model_1_1point__sprites.md#structf3d_1_1options_1_1model_1_1point__sprites_1a66d2ab28578659e1811cc6b9c979b249) Variable
* [f3d::image::read\_exception](structf3d_1_1image_1_1read__exception.md) Structure
  * [read\_exception](structf3d_1_1image_1_1read__exception.md#structf3d_1_1image_1_1read__exception_1a8494b506cc69a6e1252b171d5ffa4477) Function
* [f3d::ratio\_t](classf3d_1_1ratio__t.md) Class
  * [Value](classf3d_1_1ratio__t.md#classf3d_1_1ratio__t_1a57569a1ebdba597ad042e0a7b6273a29) Variable
  * [ratio\_t](classf3d_1_1ratio__t.md#classf3d_1_1ratio__t_1a02a8a65c4b269d42dbdc136d96744b31) Function
  * [ratio\_t](classf3d_1_1ratio__t.md#classf3d_1_1ratio__t_1a4f363d564b0a7b77e9abbfec2349ec04) Function
  * [operator double](classf3d_1_1ratio__t.md#classf3d_1_1ratio__t_1ad3cabd2f8bd0ef87119cdc46fc635dec) Function
* [f3d::options::render](structf3d_1_1options_1_1render.md) Structure
  * [armature](structf3d_1_1options_1_1render.md#structf3d_1_1options_1_1render_1ad3478d516e5e68d1cb8d18beefcf0772) Variable
  * [axes\_grid](structf3d_1_1options_1_1render.md#structf3d_1_1options_1_1render_1a04a1892a1e443c980f4b60a2b9f88afe) Variable
  * [backface\_type](structf3d_1_1options_1_1render.md#structf3d_1_1options_1_1render_1a82695a65312e226933d0b51763675e05) Variable
  * [background](structf3d_1_1options_1_1render.md#structf3d_1_1options_1_1render_1a512cf4afabde93f120ee2416077bb355) Variable
  * [effect](structf3d_1_1options_1_1render.md#structf3d_1_1options_1_1render_1aa6476ac77a14d3000f95b8bd70ce8497) Variable
  * [grid](structf3d_1_1options_1_1render.md#structf3d_1_1options_1_1render_1ad6558c44c956485c740da2b542f996ae) Variable
  * [hdri](structf3d_1_1options_1_1render.md#structf3d_1_1options_1_1render_1a8f89be3f65f5ab53942058ee92e5cf5d) Variable
  * [light](structf3d_1_1options_1_1render.md#structf3d_1_1options_1_1render_1ad718c38c999019b2bbdf1f55f2c1d6cc) Variable
  * [line\_width](structf3d_1_1options_1_1render.md#structf3d_1_1options_1_1render_1a99974f1269ca5fba5ee193ce38177257) Variable
  * [point\_size](structf3d_1_1options_1_1render.md#structf3d_1_1options_1_1render_1a059961bc089287dfd51998c53470b6a7) Variable
  * [raytracing](structf3d_1_1options_1_1render.md#structf3d_1_1options_1_1render_1aeb51fad669dcc17251301a836597702b) Variable
  * [show\_edges](structf3d_1_1options_1_1render.md#structf3d_1_1options_1_1render_1a3acfb7e1dfd5e822306b87e1b99b7ffe) Variable
* [f3d::engine::readerInformation](structf3d_1_1engine_1_1readerInformation.md) Structure
  * [Name](structf3d_1_1engine_1_1readerInformation.md#structf3d_1_1engine_1_1readerInformation_1a30aac8488fbed9ef92fba2bba859263a) Variable
  * [Description](structf3d_1_1engine_1_1readerInformation.md#structf3d_1_1engine_1_1readerInformation_1a8cd967fb8400bcafb84fac1aff4bc0af) Variable
  * [Extensions](structf3d_1_1engine_1_1readerInformation.md#structf3d_1_1engine_1_1readerInformation_1a9e778db98dc3a41875ed9c2caeaf3517) Variable
  * [MimeTypes](structf3d_1_1engine_1_1readerInformation.md#structf3d_1_1engine_1_1readerInformation_1aac8ec25ca07da4cafd1f8a157d583f27) Variable
  * [PluginName](structf3d_1_1engine_1_1readerInformation.md#structf3d_1_1engine_1_1readerInformation_1a9d938bd142eb2feb3ac72f6c07eafb6b) Variable
  * [HasSceneReader](structf3d_1_1engine_1_1readerInformation.md#structf3d_1_1engine_1_1readerInformation_1ac0dc89d52c535db198c513fb0543755e) Variable
  * [HasGeometryReader](structf3d_1_1engine_1_1readerInformation.md#structf3d_1_1engine_1_1readerInformation_1a63da7048de227a690590703369523aa3) Variable
* [f3d::options::scene](structf3d_1_1options_1_1scene.md) Structure
  * [animation](structf3d_1_1options_1_1scene.md#structf3d_1_1options_1_1scene_1ac3464ac5bd167c679929d5a03b074644) Variable
  * [camera](structf3d_1_1options_1_1scene.md#structf3d_1_1options_1_1scene_1aa8e5b6b5f400f79002b44d369e72ffd8) Variable
  * [force\_reader](structf3d_1_1options_1_1scene.md#structf3d_1_1options_1_1scene_1aa631f4c6c8dfe8d9b8c05bd68f8e94c9) Variable
  * [up\_direction](structf3d_1_1options_1_1scene.md#structf3d_1_1options_1_1scene_1aac37efed7759b93cc67cfed797fe258d) Variable
* [f3d::options::model::material](structf3d_1_1options_1_1model_1_1material.md) Structure
  * [base\_ior](structf3d_1_1options_1_1model_1_1material.md#structf3d_1_1options_1_1model_1_1material_1afa366f578919794d07c3786b9def4764) Variable
  * [metallic](structf3d_1_1options_1_1model_1_1material.md#structf3d_1_1options_1_1model_1_1material_1a27e2d3edd9a46ecb64c0f034eaad14c9) Variable
  * [roughness](structf3d_1_1options_1_1model_1_1material.md#structf3d_1_1options_1_1model_1_1material_1ab7781989154c64f8253703b46cf1e109) Variable
  * [texture](structf3d_1_1options_1_1model_1_1material.md#structf3d_1_1options_1_1model_1_1material_1a572df4419d87744f080b7397f57fdccb) Variable
* [f3d::scene](classf3d_1_1scene.md) Class
  * [add](classf3d_1_1scene.md#classf3d_1_1scene_1abb62b89f76dc0c102c7b040cd8837fae) Function
  * [add](classf3d_1_1scene.md#classf3d_1_1scene_1a7bfb6563cbc4b43741141da059092c1f) Function
  * [add](classf3d_1_1scene.md#classf3d_1_1scene_1a19c696c7ab1b02655cc8598187c4b71c) Function
  * [add](classf3d_1_1scene.md#classf3d_1_1scene_1a0a57d92388317148755090a471f2e10c) Function
  * [add](classf3d_1_1scene.md#classf3d_1_1scene_1a981b64ee508c6a0882cbdf57a99b3bb4) Function
  * [add](classf3d_1_1scene.md#classf3d_1_1scene_1a7bdb1253de9d9b0a2ecafea62628b9e4) Function
  * [clear](classf3d_1_1scene.md#classf3d_1_1scene_1ae154db17f90d720aafb2346411604c1d) Function
  * [addLight](classf3d_1_1scene.md#classf3d_1_1scene_1ae0dbd636405f91b884a41798c0488000) Function
  * [getLightCount](classf3d_1_1scene.md#classf3d_1_1scene_1a05905e5c7dc7540ba29303153b881af6) Function
  * [getLight](classf3d_1_1scene.md#classf3d_1_1scene_1a7dd307c6b9005ca6673d5738a9df6ef2) Function
  * [updateLight](classf3d_1_1scene.md#classf3d_1_1scene_1a77e8a0bad217262f01f902e756ba49c2) Function
  * [removeLight](classf3d_1_1scene.md#classf3d_1_1scene_1ad3b235b9a70810f1cbfa609d9802fa34) Function
  * [removeAllLights](classf3d_1_1scene.md#classf3d_1_1scene_1adcd47d1cee28ec70333ac691d3db48aa) Function
  * [supports](classf3d_1_1scene.md#classf3d_1_1scene_1a7542a5ca95dd82a89a3b7772cb416dfd) Function
  * [loadAnimationTime](classf3d_1_1scene.md#classf3d_1_1scene_1ae225316a771e942f930ec61588201233) Function
  * [animationTimeRange](classf3d_1_1scene.md#classf3d_1_1scene_1af6303bb8cd99ba35cf67c700d1550867) Function
  * [availableAnimations](classf3d_1_1scene.md#classf3d_1_1scene_1ac9b41a495f0e8cf680d2511e3959ce6a) Function
* [f3d::utils::string\_template](classf3d_1_1utils_1_1string__template.md) Class
  * [fragments](classf3d_1_1utils_1_1string__template.md#classf3d_1_1utils_1_1string__template_1affe82b419f30bca158eb8b049ffc20a3) Variable
  * [string\_template](classf3d_1_1utils_1_1string__template.md#classf3d_1_1utils_1_1string__template_1abaafc00ca694d03ae57e1faaa58e594c) Function
  * [substitute](classf3d_1_1utils_1_1string__template.md#classf3d_1_1utils_1_1string__template_1a482286e6db45c2056d5f1e04bae721f3) Function
  * [substitute](classf3d_1_1utils_1_1string__template.md#classf3d_1_1utils_1_1string__template_1a3597d4917b4fb62f75bc599be4122999) Function
  * [str](classf3d_1_1utils_1_1string__template.md#classf3d_1_1utils_1_1string__template_1a9b6f01393ee68ac113a9631b526dfbfb) Function
  * [variables](classf3d_1_1utils_1_1string__template.md#classf3d_1_1utils_1_1string__template_1a8f45ebbc3ed5775b79d0d5e81ca52d4e) Function
  * [substitute](classf3d_1_1utils_1_1string__template.md#classf3d_1_1utils_1_1string__template_1aa74c15b745ddd573b689bff3d3ddd16c) Function
* [f3d::context::symbol\_exception](structf3d_1_1context_1_1symbol__exception.md) Structure
  * [symbol\_exception](structf3d_1_1context_1_1symbol__exception.md#structf3d_1_1context_1_1symbol__exception_1a7b0caa387c41f6de33f386b3519079a5) Function
* [f3d::options::model::scivis](structf3d_1_1options_1_1model_1_1scivis.md) Structure
  * [array\_name](structf3d_1_1options_1_1model_1_1scivis.md#structf3d_1_1options_1_1model_1_1scivis_1af6095869f0b1427c35665492131ab0fb) Variable
  * [cells](structf3d_1_1options_1_1model_1_1scivis.md#structf3d_1_1options_1_1model_1_1scivis_1a906b6ba29fa63c9b3b5ec547f3a53f27) Variable
  * [colormap](structf3d_1_1options_1_1model_1_1scivis.md#structf3d_1_1options_1_1model_1_1scivis_1abb3219461141f5ff8864c870cc8ba8d0) Variable
  * [component](structf3d_1_1options_1_1model_1_1scivis.md#structf3d_1_1options_1_1model_1_1scivis_1a977abf161325897256e380a5bb007d22) Variable
  * [discretization](structf3d_1_1options_1_1model_1_1scivis.md#structf3d_1_1options_1_1model_1_1scivis_1ac7ae9da19bfc26ae445e818ff281c64a) Variable
  * [enable](structf3d_1_1options_1_1model_1_1scivis.md#structf3d_1_1options_1_1model_1_1scivis_1ac6d8e206469ba20a22fb72e43ae3e2f6) Variable
  * [range](structf3d_1_1options_1_1model_1_1scivis.md#structf3d_1_1options_1_1model_1_1scivis_1ad8d01d0b28da0651dbf1361728119d07) Variable
* [f3d::transform2d\_t](classf3d_1_1transform2d__t.md) Class
  * [transform2d\_t](classf3d_1_1transform2d__t.md#classf3d_1_1transform2d__t_1ab657bdb45cbf4124f28b96828d056d63) Function
  * [transform2d\_t](classf3d_1_1transform2d__t.md#classf3d_1_1transform2d__t_1a3081204d9c43256e72f6cca0576f0651) Function
  * [transform2d\_t](classf3d_1_1transform2d__t.md#classf3d_1_1transform2d__t_1a2800721840535bd112285ec29d34e881) Function
  * [transform2d\_t](classf3d_1_1transform2d__t.md#classf3d_1_1transform2d__t_1a7e76f1c32dec6276bacbbf82b35dc1bf) Function
  * [transform2d\_t](classf3d_1_1transform2d__t.md#classf3d_1_1transform2d__t_1a87d0abcde4b4c8ed729e20fbf594b1cf) Function
* [f3d::utils::tokenize\_exception](structf3d_1_1utils_1_1tokenize__exception.md) Structure
  * [tokenize\_exception](structf3d_1_1utils_1_1tokenize__exception.md#structf3d_1_1utils_1_1tokenize__exception_1a0693bd9dc5395dedd10c3e6bd7f3e271) Function
* [f3d::type\_access\_exception](structf3d_1_1type__access__exception.md) Structure
  * [type\_access\_exception](structf3d_1_1type__access__exception.md#structf3d_1_1type__access__exception_1ab3fb2a5741c6a58afd1c17c7607fd7aa) Function
* [f3d::type\_construction\_exception](structf3d_1_1type__construction__exception.md) Structure
  * [type\_construction\_exception](structf3d_1_1type__construction__exception.md#structf3d_1_1type__construction__exception_1ae979e25c0c37cd043f1f82fee310209e) Function
* [f3d::options::ui](structf3d_1_1options_1_1ui.md) Structure
  * [animation\_progress](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1ae59abab94c46ea815619719508e4cc45) Variable
  * [axis](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1abfd8854499551ce7c0c540d78df2aff1) Variable
  * [backdrop](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a22decd9179c26365b4bd3a362f082ffa) Variable
  * [cheatsheet](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a1cde66196d0a9ce0226138000375fe34) Variable
  * [console](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a6f1714ac73921c439ec565d81a37ab6f) Variable
  * [drop\_zone](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a3d7eb05cdc0b47b25ebe4c064ed193fc) Variable
  * [dropzone](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a9fbb41f4b580d17168ec5de11684b8a7) Variable
  * [dropzone\_info](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a83d3e3bca58cdf8b05ebf40d6720db91) Variable
  * [filename](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a7048320d9bb390ae7835661897e95dd1) Variable
  * [filename\_info](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a0e50b1165e587143d700f0c2d63ad418) Variable
  * [font\_file](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1aa3b74802f8b6f49f192b5e10bdf0e57d) Variable
  * [fps](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a32b32dd1964f7aef02551de40fd7f621) Variable
  * [loader\_progress](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a57c3b693a4c40a2b53c2bbd78a424590) Variable
  * [metadata](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a15cbd89b8b286034c91edf77f6278a7e) Variable
  * [minimal\_console](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1af69b0a70c39649a14b49b06a3c429f37) Variable
  * [scalar\_bar](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a00a0273d310e85dd94b8e974affc6b44) Variable
  * [scale](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a240d1a8507160aa83f10508efa911f56) Variable
* [f3d::utils](classf3d_1_1utils.md) Class
  * [KnownFolder](classf3d_1_1utils.md#classf3d_1_1utils_1aebad957764dffbf22565e30997402037) Enumeration type
  * [ROAMINGAPPDATA](classf3d_1_1utils.md#classf3d_1_1utils_1aebad957764dffbf22565e30997402037ae38588db6e73d4680ec6a0fb2717b85b) Enumerator
  * [LOCALAPPDATA](classf3d_1_1utils.md#classf3d_1_1utils_1aebad957764dffbf22565e30997402037a26e533b6cb5cf77f7d0a48c2e45598f7) Enumerator
  * [PICTURES](classf3d_1_1utils.md#classf3d_1_1utils_1aebad957764dffbf22565e30997402037a7aa9c13a2316c4a661679ecb863b3775) Enumerator
  * [textDistance](classf3d_1_1utils.md#classf3d_1_1utils_1a57ebdf21e25b83bdefe7f23743e74424) Function
  * [tokenize](classf3d_1_1utils.md#classf3d_1_1utils_1ae1cfff8e2b9d13a7556133db81b7971f) Function
  * [collapsePath](classf3d_1_1utils.md#classf3d_1_1utils_1a42d295d8692eeab2def58534f52dd3cb) Function
  * [globToRegex](classf3d_1_1utils.md#classf3d_1_1utils_1a31985a8c903ca9880f66e48e0b2cdd99) Function
  * [getEnv](classf3d_1_1utils.md#classf3d_1_1utils_1a79dd2ab7d2021779d80b14dbfc7520d1) Function
  * [getKnownFolder](classf3d_1_1utils.md#classf3d_1_1utils_1a19f45d7340b90d124a7bef05d82acbaf) Function
* [f3d::vector3\_t](structf3d_1_1vector3__t.md) Structure
* [f3d::window](classf3d_1_1window.md) Class
  * [Type](classf3d_1_1window.md#classf3d_1_1window_1a4742753b53b500ca62f402424aa1f471) Enumeration type
  * [NONE](classf3d_1_1window.md#classf3d_1_1window_1a4742753b53b500ca62f402424aa1f471ab50339a10e1de285ac99d4c3990b8693) Enumerator
  * [EXTERNAL](classf3d_1_1window.md#classf3d_1_1window_1a4742753b53b500ca62f402424aa1f471a3932d629fb5e2be9d09b3a4485b3cc9d) Enumerator
  * [GLX](classf3d_1_1window.md#classf3d_1_1window_1a4742753b53b500ca62f402424aa1f471ac313d26d26abf7402a24ce15663b52b6) Enumerator
  * [WGL](classf3d_1_1window.md#classf3d_1_1window_1a4742753b53b500ca62f402424aa1f471aef3c7326c5c23cc9c408d29410352b67) Enumerator
  * [COCOA](classf3d_1_1window.md#classf3d_1_1window_1a4742753b53b500ca62f402424aa1f471a0439e3cee63c8741e500230121911962) Enumerator
  * [EGL](classf3d_1_1window.md#classf3d_1_1window_1a4742753b53b500ca62f402424aa1f471ab1e1fe0cc927dbeae22dc1839e01bb20) Enumerator
  * [OSMESA](classf3d_1_1window.md#classf3d_1_1window_1a4742753b53b500ca62f402424aa1f471a8e7cb674425fba84b801d46f1fd26b34) Enumerator
  * [WASM](classf3d_1_1window.md#classf3d_1_1window_1a4742753b53b500ca62f402424aa1f471ac7dbeb10b3299406a04231654cf6defd) Enumerator
  * [UNKNOWN](classf3d_1_1window.md#classf3d_1_1window_1a4742753b53b500ca62f402424aa1f471a696b031073e74bf2cb98e5ef201d4aa3) Enumerator
  * [getType](classf3d_1_1window.md#classf3d_1_1window_1aef4007b0592061fa3f47152b311cc680) Function
  * [isOffscreen](classf3d_1_1window.md#classf3d_1_1window_1a0c44d1982ff046a99204937e0df1169d) Function
  * [getCamera](classf3d_1_1window.md#classf3d_1_1window_1a96bc2fa72c67f0fd2242388bb3cbd32b) Function
  * [render](classf3d_1_1window.md#classf3d_1_1window_1ab0b3550f37167c31821e7ec7400bc0de) Function
  * [renderToImage](classf3d_1_1window.md#classf3d_1_1window_1a5f680e97668e40cb8640a9c6d8340b57) Function
  * [setSize](classf3d_1_1window.md#classf3d_1_1window_1ac88005ab237f1aaa559968b3752a8509) Function
  * [getWidth](classf3d_1_1window.md#classf3d_1_1window_1a7c115887e68c0bdd5cf7c6048f410c52) Function
  * [getHeight](classf3d_1_1window.md#classf3d_1_1window_1ad6a230a5f6b8e83ea7680da1c6a32434) Function
  * [setPosition](classf3d_1_1window.md#classf3d_1_1window_1a80d951424a1687434219a6e8030d5db3) Function
  * [setIcon](classf3d_1_1window.md#classf3d_1_1window_1a97032a56c303d51b9b74a438341696d7) Function
  * [setWindowName](classf3d_1_1window.md#classf3d_1_1window_1ae5d1313a7822bd6bf234369feb544f37) Function
  * [getWorldFromDisplay](classf3d_1_1window.md#classf3d_1_1window_1ae963c7f41cecb2fb585a83495b05bb73) Function
  * [getDisplayFromWorld](classf3d_1_1window.md#classf3d_1_1window_1a95946b71f0ff9a3cbc36bc9b717270b8) Function
* [f3d::options::model::volume](structf3d_1_1options_1_1model_1_1volume.md) Structure
  * [enable](structf3d_1_1options_1_1model_1_1volume.md#structf3d_1_1options_1_1model_1_1volume_1a7ac4a857fdecb94be4682b9593b770ae) Variable
  * [inverse](structf3d_1_1options_1_1model_1_1volume.md#structf3d_1_1options_1_1model_1_1volume_1a512efc34a86fac6cdb93392dc7a5fd97) Variable
* [f3d::image::write\_exception](structf3d_1_1image_1_1write__exception.md) Structure
  * [write\_exception](structf3d_1_1image_1_1write__exception.md#structf3d_1_1image_1_1write__exception_1ae60ce88787aeb45de2d75c16d1ae0e3a) Function
* [f3d](namespacef3d.md) Namespace
  * [option\_variant\_t](namespacef3d.md#options_8h_1a64f3fb0a25524b592638f097793a05f6) Typedef
  * [angle\_deg\_t](namespacef3d.md#types_8h_1afffcb2b9b7c98468046339a5f53837ce) Typedef
  * [light\_type](namespacef3d.md#types_8h_1abf2507668577f7e4f3f728cd68724320) Variable
  * [CAMERA\_LIGHT](namespacef3d.md#types_8h_1aa00b99d10397b786c4d08f690cf37bde) Variable
  * [SCENE\_LIGHT](namespacef3d.md#types_8h_1a05caa6569d9851cec58bebd695c05d3d) Variable
* [context.h](context_8h.md) File
* [camera.h](camera_8h.md) File
* [engine.h](engine_8h.md) File
* [exception.h](exception_8h.md) File
* [interactor.h](interactor_8h.md) File
* [log.h](log_8h.md) File
* [image.h](image_8h.md) File
* [options.h](options_8h.md) File
  * [operator\<\<](options_8h.md#options_8h_1ae45474fc5074fe195869b53d2a5429c1) Function
  * [operator\<\<](options_8h.md#options_8h_1a787081c010d4258cf01a9d7e4c0fdc1a) Function
  * [operator\<\<](options_8h.md#options_8h_1a9ac8e9c6c6a4dab9c5d3479c457f136d) Function
  * [operator\<\<](options_8h.md#options_8h_1a690455850de66a7a03be6b3208cb16a4) Function
* [scene.h](scene_8h.md) File
* [types.h](types_8h.md) File
* [window.h](window_8h.md) File
* [utils.h](utils_8h.md) File